--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^2.4.2",
     "@react-native-community/masked-view": "^0.1.9",
-    "@react-navigation/bottom-tabs": "^5.5.1",
+    "@react-navigation/bottom-tabs": "^5.5.2",
     "@react-navigation/material-top-tabs": "^5.2.9",
     "@react-navigation/native": "^5.1.5",
     "@react-navigation/stack": "^5.2.10",
@@ -21,10 +22,15 @@
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.5.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-tab-navigator": "^0.3.4",
     "react-native-tab-view": "^2.14.2",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^4.3.7"
+    "react-native-webview": "^10.3.1",
+    "react-navigation": "^4.3.7",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
